// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`SettingsSetupTOTPDialog > renders correctly 1`] = `
<div
  data-v-17338b37=""
  data-v-91599494=""
>
  <dialog-toolbar-stub
    color="white"
    data-v-91599494=""
    iconcolor=""
    title="Set Up Two-factor authentication"
    titleicon=""
  />
  <v-card-text-stub
    class="pb-0 dialog-content px-2 pt-2"
    data-v-91599494=""
    tag="div"
  >
    
    <v-form-stub
      data-v-17338b37=""
      disabled="false"
      fastfail="false"
      modelvalue="true"
      validateon="input"
    >
      <div
        class="py-0 px-2"
        data-v-17338b37=""
      >
        <div
          class="d-flex justify-center pa-6 align-end"
          data-v-17338b37=""
        >
          <div
            class="space-balancer"
            data-v-17338b37=""
          />
          <qr-code-vue-stub
            background="#fff"
            data-v-17338b37=""
            foreground="#000"
            gradient="false"
            gradientendcolor="#fff"
            gradientstartcolor="#000"
            gradienttype="linear"
            imagesettings="[object Object]"
            level="H"
            margin="0"
            renderas="canvas"
            size="200"
            value="otpauth://totp/AWSCognito:testuser?secret=abcd1234&issuer=undefined"
          />
          <img
            alt="Mr Evocon"
            data-v-17338b37=""
            src="/src/assets/images/happy-notice.svg"
          />
        </div>
        <div
          class="pb-4 text-body-medium text-center text-secondary-text"
          data-v-17338b37=""
        >
          Scan the QR code with the authenticator app.
        </div>
        <div
          data-v-17338b37=""
        >
          <div
            class="text-body-large font-weight-bold text-center"
            data-v-17338b37=""
          >
            Authenticator code
          </div>
          <div
            class="d-flex justify-center otp-input-width mx-auto"
            data-v-17338b37=""
          >
            <otp-input-stub
              data-v-17338b37=""
              digitcount="6"
              invalid="false"
              label=""
            />
          </div>
          <div
            class="py-2 text-center"
            data-v-17338b37=""
          >
            <evocon-v-button-stub
              color=""
              data-v-17338b37=""
              icon=""
              iconcolor=""
              text="Can't scan the QR code?"
              textclass=""
              type="secondary"
            />
            <div
              data-v-17338b37=""
              style="display: none;"
            >
              <content-column-stub
                contentheader="Enter this code manually into your authenticator app:"
                contentvalue="abcd1234"
                data-v-17338b37=""
                haserror="false"
                prependicon="M7 1C5.9 1 5 1.9 5 3V7H7V4H17V20H7V17H5V21C5 22.1 5.9 23 7 23H17C18.1 23 19 22.1 19 21V3C19 1.9 18.1 1 17 1H7M6 9C4.3 9 3 10.3 3 12S4.3 15 6 15C7.3 15 8.4 14.2 8.8 13H11V15H13V13H15V11H8.8C8.4 9.8 7.3 9 6 9M6 11C6.6 11 7 11.4 7 12S6.6 13 6 13 5 12.6 5 12 5.4 11 6 11Z"
              />
            </div>
          </div>
        </div>
      </div>
    </v-form-stub>
    
  </v-card-text-stub>
  <v-card-actions-stub
    class=""
    data-v-91599494=""
    tag="div"
  >
    
    <v-spacer-stub
      data-v-17338b37=""
      tag="div"
    />
    <evocon-v-button-stub
      color=""
      data-v-17338b37=""
      icon=""
      iconcolor=""
      id="cancel-button"
      text="Cancel"
      textclass=""
      type="secondary"
    />
    <evocon-v-button-stub
      color="primary"
      data-v-17338b37=""
      icon=""
      iconcolor=""
      id="save-button"
      loading="false"
      text="Save"
      textclass=""
      type="primary"
    />
    
  </v-card-actions-stub>
</div>
`;

exports[`SettingsSetupTOTPDialog > renders correctly if showManualSetup is true 1`] = `
<div
  data-v-17338b37=""
  data-v-91599494=""
>
  <dialog-toolbar-stub
    color="white"
    data-v-91599494=""
    iconcolor=""
    title="Set Up Two-factor authentication"
    titleicon=""
  />
  <v-card-text-stub
    class="pb-0 dialog-content px-2 pt-2"
    data-v-91599494=""
    tag="div"
  >
    
    <v-form-stub
      data-v-17338b37=""
      disabled="false"
      fastfail="false"
      modelvalue="true"
      validateon="input"
    >
      <div
        class="py-0 px-2"
        data-v-17338b37=""
      >
        <div
          class="d-flex justify-center pa-6 align-end"
          data-v-17338b37=""
        >
          <div
            class="space-balancer"
            data-v-17338b37=""
          />
          <qr-code-vue-stub
            background="#fff"
            data-v-17338b37=""
            foreground="#000"
            gradient="false"
            gradientendcolor="#fff"
            gradientstartcolor="#000"
            gradienttype="linear"
            imagesettings="[object Object]"
            level="H"
            margin="0"
            renderas="canvas"
            size="200"
            value="otpauth://totp/AWSCognito:testuser?secret=abcd1234&issuer=undefined"
          />
          <img
            alt="Mr Evocon"
            data-v-17338b37=""
            src="/src/assets/images/happy-notice.svg"
          />
        </div>
        <div
          class="pb-4 text-body-medium text-center text-secondary-text"
          data-v-17338b37=""
        >
          Scan the QR code with the authenticator app.
        </div>
        <div
          data-v-17338b37=""
        >
          <div
            class="text-body-large font-weight-bold text-center"
            data-v-17338b37=""
          >
            Authenticator code
          </div>
          <div
            class="d-flex justify-center otp-input-width mx-auto"
            data-v-17338b37=""
          >
            <otp-input-stub
              data-v-17338b37=""
              digitcount="6"
              invalid="false"
              label=""
            />
          </div>
          <div
            class="py-2"
            data-v-17338b37=""
          >
            <evocon-v-button-stub
              color=""
              data-v-17338b37=""
              icon=""
              iconcolor=""
              style="display: none;"
              text="Can't scan the QR code?"
              textclass=""
              type="secondary"
            />
            <div
              data-v-17338b37=""
              style=""
            >
              <content-column-stub
                contentheader="Enter this code manually into your authenticator app:"
                contentvalue="abcd1234"
                data-v-17338b37=""
                haserror="false"
                prependicon="M7 1C5.9 1 5 1.9 5 3V7H7V4H17V20H7V17H5V21C5 22.1 5.9 23 7 23H17C18.1 23 19 22.1 19 21V3C19 1.9 18.1 1 17 1H7M6 9C4.3 9 3 10.3 3 12S4.3 15 6 15C7.3 15 8.4 14.2 8.8 13H11V15H13V13H15V11H8.8C8.4 9.8 7.3 9 6 9M6 11C6.6 11 7 11.4 7 12S6.6 13 6 13 5 12.6 5 12 5.4 11 6 11Z"
              />
            </div>
          </div>
        </div>
      </div>
    </v-form-stub>
    
  </v-card-text-stub>
  <v-card-actions-stub
    class=""
    data-v-91599494=""
    tag="div"
  >
    
    <v-spacer-stub
      data-v-17338b37=""
      tag="div"
    />
    <evocon-v-button-stub
      color=""
      data-v-17338b37=""
      icon=""
      iconcolor=""
      id="cancel-button"
      text="Cancel"
      textclass=""
      type="secondary"
    />
    <evocon-v-button-stub
      color="primary"
      data-v-17338b37=""
      icon=""
      iconcolor=""
      id="save-button"
      loading="false"
      text="Save"
      textclass=""
      type="primary"
    />
    
  </v-card-actions-stub>
</div>
`;
